# group_wallet

./: Cargo.toml  README.md  canister_ids.json  dfx.json
src/: Cargo.toml  lib.rs  methods.rs  result.rs  store.rs
src/calls/: airdrop_calls.rs  mod.rs  transfer_calls.rs  whitelist_calls.rs
src/canister/: Cargo.toml  lib.rs  result.rs
src/canister/calls/: airdrop_calls.rs  mod.rs  owner_calls.rs  proposal_calls.rs  transfer_calls.rs  whitelist_calls.rs
src/canister/helpers/: guards.rs  icrc.rs  mod.rs  validator.rs  votes.rs
src/canister/logic/: airdrop_logic.rs  consts.rs  mod.rs  notifications_logic.rs  owner_logic.rs  proposal_logic.rs  transfer_logic.rs  whitelist_logic.rs
src/canister/storage/: airdrop_request_storage.rs  airdrop_transfer_storage.rs  cell_api.rs  metadata_storage.rs  mod.rs  multisig_index_storage.rs  owner_storage.rs  proposal_storage.rs  request_storage_api.rs  state.rs  storage_api.rs  transfer_request_storage.rs  vote_storage.rs  voting_period_storage.rs  wallet_index_storage.rs  (+2 more)
src/helpers/: guards.rs  mod.rs  validator.rs  votes.rs
src/ledger_declarations/: types.rs
src/logic/: airdrop_logic.rs  icrc.rs  mod.rs  store.rs  transaction_logic.rs  transfer_logic.rs  whitelist_logic.rs
src/models/: airdrop_request.rs  airdrop_transaction.rs  airdrop_transactions.rs  airdrop_transfer.rs  airdrop_transfers.rs  dip20_declaration.rs  error.rs  icrc_declaration.rs  mod.rs  transaction_request.rs  transfer_request.rs  types.rs  votes.rs  whitelist_request.rs
src/rust_declarations/: dip20_declaration.rs  icrc_declaration.rs  types.rs
src/storage/: airdrop_request_storage.rs  airdrop_transfer_storage.rs  mod.rs  request_storage_api.rs  state.rs  storage_api.rs  transfer_request_storage.rs  whitelist_request_storage.rs
src/types/: Cargo.toml
(+21 files in other folders)
