[package]
name = "multisig"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[[test]]
name="generate"
path = "lib.rs"

[dependencies]
candid = "0.9.8"
ic-cdk = "0.11.0"
serde = "1.0"
ic-ledger-types = "0.8.0"
ic-cdk-timers = "0.4.0"
serde_bytes = "0.11.12"