[package]
name = "group_wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.7"
ic-cdk = "0.13.2"
serde = "1.0.198"
ic-ledger-types = "0.10.0"
ic-cdk-timers = "0.7.0"
serde_bytes = "0.11.14"
ic-stable-structures = "0.6.1"
unicode-segmentation = "1"
icrc-ledger-types = "0.1"
