[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
candid = "0.10"
serde = "1"
serde_json = "1.0"
ic-cdk = "0.14"
ic-stable-structures = "0.6"
icrc-ledger-types = "0.1"
